2004-10-05  Jeffrey Stedfast  <fejj@novell.com>

	* camel-service.c (camel_getaddrinfo): Check msg->result for error
	and set an exception if appropriate.
	(camel_getnameinfo): Same.

2004-10-04  Jeffrey Stedfast  <fejj@novell.com>

	* camel-service.c (camel_getaddrinfo): Add a non-const cast for
	hints when changing the ai_family member in the IPv6-disabled
	case. Fixes bug #67028.

2004-10-05  Not Zed  <NotZed@Ximian.com>

	** See bug #67527.

	* camel-service.c (cs_getaddrinfo, cs_getnameinfo): don't loop on
	EAI_AGAIN, it doesn't appear to mean the same as EAGAIN does with
	system calls (i guess 'no shit sherlock' really).

2004-10-04  JP Rosevear  <jpr@novell.com>

	* providers/imap4/camel-imap4-provider.c: include camel-i18n.h

2004-10-01  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-folder.c (imap4_sync): If we aren't
	online, we're done. nothing to do.
	(imap4_refresh_info): Same.
	(imap4_append_message): Same but set an exception.
	(imap4_transfer_messages_to): Same.

	* camel-service.c (camel_getaddrinfo): Avoid assigning a value to
	the member of a const struct (which newer gcc's apparently break
	over) by casting to non-const.

2004-09-28  Not Zed  <NotZed@Ximian.com>

	** See bug #66509.

	* providers/nntp/camel-nntp-store.c (camel_nntp_command): if we
	get an error selecting the folder, disconnect/include it in the
	re-try loop.
	(camel_nntp_command): don't set the exception based on errno,
	exception processing is already done.  don't clear it if we're on
	the 3rd retry.

2004-09-27  Not Zed  <NotZed@Ximian.com>
	
	* providers/nntp/camel-nntp-store.c (nntp_get_folder_info): don't
	do any locking here.
	(nntp_store_get_folder_info_all): move the locking here.
	(nntp_store_get_subscribed_folder_info): and some here too.

	* providers/nntp/camel-nntp-store.c:
	* providers/nntp/camel-nntp-folder.c: Remove nntp command_lock and
	just use the service connect lock for serialisation.

2004-09-14  Jeffrey Stedfast  <fejj@novell.com>
